# Pxldeck

./: .gitmodules  README.md
Case/: LaLeMa.FCStd
Controller/: Controller-B_Paste.gbr  Controller-B_SilkS.gbr  Controller-Edge_Cuts.gbr  Controller-F_Cu.gbr  Controller-NPTH-drl_map.ps  Controller-cache.lib  _autosave-Controller.kicad_pcb
Hardware/Case/: LaLeMa.FCStd
Hardware/Controller/: Controller-B_Cu.gbr  Controller-B_Mask.gbr  Controller-F_Mask.gbr  Controller-F_Paste.gbr  Controller-F_SilkS.gbr  Controller-NPTH.drl  Controller-PTH-drl_map.ps  Controller-PTH.drl  Controller-job.gbrjob  Controller.kicad_pcb  Controller.kicad_pcb-bak  Controller.kicad_prl  Controller.kicad_pro  Controller.kicad_sch  Controller.sch  Controller.sch-bak
Hardware/Controller/Gerber/: Controller-B_Cu.gbr  Controller-B_Mask.gbr  Controller-B_Paste.gbr  Controller-B_Silkscreen.gbr  Controller-Edge_Cuts.gbr  Controller-F_Cu.gbr  Controller-F_Mask.gbr  Controller-F_Paste.gbr  Controller-F_Silkscreen.gbr  Controller-NPTH.drl  Controller-PTH.drl  Controller-job.gbrjob
Hardware/Mainboard/: Mainboard-cache.lib  Mainboard-rescue.lib  Mainboard.kicad_pcb  Mainboard.kicad_prl  Mainboard.kicad_pro  Mainboard.kicad_sch  Mainboard.pro  Mainboard.sch-bak  Rev-A Mods  fp-info-cache  sym-lib-table
Hardware/Mainboard/gerber/: Mainboard-B_Cu.gbr  Mainboard-B_Mask.gbr  Mainboard-B_Paste.gbr  Mainboard-B_Silkscreen.gbr  Mainboard-Edge_Cuts.gbr  Mainboard-F_Cu.gbr  Mainboard-F_Mask.gbr  Mainboard-F_Paste.gbr  Mainboard-F_Silkscreen.gbr  Mainboard-NPTH.drl  Mainboard-PTH.drl  Mainboard-job.gbrjob
Hardware/USB/: USB.sch-bak
Hardware/USB/gerber/: USB-B_Cu.gbr  USB-B_Mask.gbr  USB-Edge_Cuts.gbr  USB-F_Cu.gbr  USB-F_Mask.gbr  USB-F_SilkS.gbr
Mainboard/: Mainboard-cache.lib  Mainboard.kicad_pcb  Mainboard.kicad_pcb-bak  Mainboard.net  Mainboard.pro  Mainboard.sch  Mainboard.sch-bak  _autosave-Mainboard.kicad_pcb  _autosave-Mainboard.sch
Mainboard/gerber/: Mainboard-B_Cu.gbr  Mainboard-B_Mask.gbr  Mainboard-B_Paste.gbr  Mainboard-B_SilkS.gbr  Mainboard-F_Cu.gbr  Mainboard-F_SilkS.gbr
Software/: CMakeLists.txt  LaLeMa.kdev4  Software.kdev4  sdkconfig  sdkconfig.old
Software/.kdev4/: LaLeMa.kdev4  Software.kdev4
Software/ESP32-HUB75-MatrixPanel-I2S-DMA/: ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-leddrivers.cpp
Software/api/: CMakeLists.txt
Software/api/include/: HLM_battery.h  HLM_game.h  HLM_graphics.h  HLM_network.h  HLM_os.h  HLM_playerInput.h  HLM_random.h  HLM_storage.h  HLM_time.h
Software/esp32/: sdkconfig
Software/esp32/ESP32-HUB75-MatrixPanel-I2S-DMA/: ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-I2S-DMA.h  esp32_i2s_parallel_v2.c
Software/esp32/GFX/: GFX.cpp  GFX.h
Software/esp32/main/: CMakeLists.txt  graphics.cpp  graphics.h  main.cpp
Software/esp32/main/games/gamesApi/: gamesApi.h
Software/esp32/main/games/pong/: pong.cpp  pong.h
Software/esp32/main/games/tetris/: .tetris_game.cpp.kate-swp  tetris.cpp  tetris.h  tetris_draw.cpp  tetris_draw.h  tetris_game.cpp  tetris_game.h
Software/esp32/main/mainMenu/: mainMenu.cpp  mainMenu.h
Software/esp32/main/playerInput/: playerInput.c  playerInput.h
Software/esp32/main/xmegaComm/: xmegaComm.c  xmegaComm.h
Software/games/: CMakeLists.txt
Software/games/Snake/: effects.cpp  effects.h  point.h  snake.cpp  snake.h  snake_game.cpp  snake_game.h
Software/games/pong/: pong.cpp  pong.h
Software/games/sokoban/: level.cpp  level.h  levels.c  sokoban.cpp  sokoban.h
Software/games/tetris/: tetris.cpp  tetris.h  tetris_draw.cpp  tetris_draw.h  tetris_game.cpp  tetris_game.h
Software/games/tictactoe/: tictactoe.cpp  tictactoe.h
Software/libs/: CMakeLists.txt  defaultInputEvents.cpp  inputEvents.cpp
Software/libs/include/: defaultInputEvents.h  inputEvents.h
Software/main/: bootlogo.c  main.cpp
Software/os/: CMakeLists.txt  HLM_os.cpp
Software/os/accounts/: accounts.cpp  accounts.h
Software/os/mainMenu/: mainMenu.cpp  mainMenu.h  playerIcons.c
Software/os/settingsMenu/: settingsMenu.cpp  settingsMenu.h
Software/xmega/: .gitignore  README.md  VirtualSerial.c  VirtualSerial.elf  VirtualSerial.h  VirtualSerial.hex  VirtualSerial.lss  VirtualSerial.map  VirtualSerial.sym  adcMultipin.h  buttonMatrix.c  buttonMatrix.h  espComm.c  espComm.h  joystick.c  joystick.h  main.c  makefile  powermanagement.c  powermanagement.h  setup.h  swRingbuffer.c  swRingbuffer.h
Software/xmega/.kdev4/: xmega.kdev4
Software/xmega/Config/: LUFAConfig.h
USB/: USB-cache.lib  USB.kicad_pcb  USB.kicad_pcb-bak  USB.sch
USB/gerber/: USB-B_SilkS.gbr  USB-NPTH.drl  USB-PTH.drl  USB-job.gbrjob
